docs : added documentation for create Opening
